Trying to fix Travis CI build issue by adding         <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine> to samples pom.xml